python/testData/inspections/PyUnresolvedReferencesInspection3K/NamespacePackageRedundantUnion/a.py
from nspkg1 import <error descr="Cannot find reference 'not_found' in 'nspkg1'">not_found</error>